// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Animate should render correctly 1`] = `
<div
  className="test"
  style={
    Object {
      "transition": "1s all linear",
    }
  }
>
  test
</div>
`;

exports[`Animate should render correctly for children 1`] = `
<div
  className="test"
  style={
    Object {
      "transition": "1s all linear",
    }
  }
>
  <div>
    test
    1
  </div>
  <div>
    test
    2
  </div>
</div>
`;

exports[`Animate should render correctly with render props 1`] = `
<div
  className="test"
  style={
    Object {
      "transition": "1s all linear",
    }
  }
>
  what
</div>
`;

exports[`Animate should render custome tag correctly 1`] = `
<l
  className="test"
  style={
    Object {
      "transition": "1s all linear",
    }
  }
/>
`;

exports[`Animate when animate on add or remove enabled should render correctly for Animate children 1`] = `
<div
  className="test"
  style={
    Object {
      "transition": "1s all linear",
    }
  }
>
  <div
    className={Object {}}
    style={
      Object {
        "transition": "0.3s all linear",
      }
    }
  >
    <div>
      test
      1
    </div>
  </div>
  <div
    className={Object {}}
    style={
      Object {
        "transition": "0.3s all linear",
      }
    }
  >
    <div>
      test
      2
    </div>
  </div>
</div>
`;

exports[`Animate when animate on add or remove enabled should render correctly for children 1`] = `
<div
  className="test"
  style={
    Object {
      "transition": "1s all linear",
    }
  }
>
  <div
    style={
      Object {
        "transition": "1s all linear",
      }
    }
  >
    test
    1
  </div>
  <div
    style={
      Object {
        "transition": "1s all linear",
      }
    }
  >
    test
    2
  </div>
</div>
`;
